[gd_scene load_steps=16 format=2]

[ext_resource path="res://Misc/Overlap/PortalInLevel.gd" type="Script" id=1]
[ext_resource path="res://Misc/Black.jpg" type="Texture" id=2]
[ext_resource path="res://Misc/Keys/E.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Misc/DoorSounds/DoorSound2.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Misc/DoorSounds/DoorSound1.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Misc/DoorSounds/DoorSound3.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Misc/DoorSounds/DoorSound4.mp3" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 30.5 )

[sub_resource type="Animation" id=2]
resource_name = "Quit"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 1e+08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Off"
length = 1e+08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "On"
length = 1e+08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PortalInLevel" type="Area2D"]
position = Vector2( 0, 12 )
collision_layer = 8192
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13.5 )
shape = SubResource( 1 )
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 24, -5.69461 )
rotation = 1.57731
enabled = true
cast_to = Vector2( 0.312555, 47.999 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Black" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 972, 544 )
scale = Vector2( 6.48, 6.47619 )
texture = ExtResource( 2 )

[node name="StartAnim" type="AnimationPlayer" parent="CanvasLayer/Black"]
reset_on_save = false
anims/Quit = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Start = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
light_mask = 0
material = SubResource( 5 )
position = Vector2( 1.12372, -37.5734 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
method_call_mode = 1
anims/Idle = SubResource( 6 )
anims/Off = SubResource( 7 )
anims/On = SubResource( 8 )

[node name="DoorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="DoorSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="DoorSound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="DoorSound4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_PortalInLevel_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
